Fix hover gap to allow clicking sub-sections

--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ span {
     padding-bottom: 15px;
     /* margin-bottom: 80px; */
     z-index: 10;
-    margin-top: 10px;
+    top: 80px;
     font-family: Whitney, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, ;
 }
 
@@ -105,7 +105,7 @@ span {
     padding-right: 10PX;
     padding-bottom: 15px;
     z-index: 10;
-    margin-top: 10px;
+    top: 80px;
     font-family: Whitney, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, ;
 }
 
@@ -123,7 +123,7 @@ span {
     padding-right: 10PX;
     padding-bottom: 15px;
     z-index: 10;
-    margin-top: 10px;
+    top: 80px;
     font-family: Assistant, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, ;
 }
 
@@ -141,7 +141,7 @@ span {
     padding-right: 10PX;
     padding-bottom: 15px;
     z-index: 10;
-    margin-top: 10px;
+    top: 80px;
     font-family: Assistant, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, ;
     
 }
@@ -160,7 +160,7 @@ span {
     padding-right: 25px;
     padding-bottom: 15px;
     z-index: 10;
-    margin-top: 10px;
+    top: 80px;
     font-family: Assistant, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, ;
 }
 
